Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -30,24 +30,126 @@
       <section id="main_content">
         <h1>bcplib</h1>
 
-<p>bcplib is a OO c library of common data structures and algorithms. 
+<p>bcplib is a object-oriented C library of common data structures and algorithms. 
 The philosophy of bcplib is to build a easy-to-use, easy-to-extend library.
 And I also try to make all modules independent so that user may only need
-a very limit subset of bcplib to run a specific module.</p>
+a very limit subset of bcplib to run a specific module. The development of
+bcplib is motivated by Java SDK. If you are familiar with Java, you can use
+bcplib in a way that you use Java.</p>
 
-<p>Copyright (C) 2012  Yirui Zhang<br>
-This program is free software: you can redistribute it and/or modify
-it under the terms of the GNU General Public License as published by
-the Free Software Foundation, either version 3 of the License, or
-(at your option) any later version.</p>
+<p>Currently, bcplib is developed and tested in gcc 4. When using bcplib, you need
+to make sure the structure alignment strategy in specific Compiler won't 
+influence the function of bcplib.</p>
 
-<p>This program is distributed in the hope that it will be useful,
-but WITHOUT ANY WARRANTY; without even the implied warranty of
-MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-GNU General Public License for more details.</p>
+<p>Be ware of the number of objects you created. Object in bcplib is space
+consuming, in a 32-bit architecture, a <em>arraylist</em> object takes up to 104 bytes.</p>
 
-<p>You should have received a copy of the GNU General Public License
-along with this program.  If not, see <a href="http://www.gnu.org/licenses/">http://www.gnu.org/licenses/</a>.</p>
+<hr><h1>How to use bcplib</h1>
+
+<p>The interface of bcplib is very simple.</p>
+
+<h2>Create &amp;&amp; destroy Object</h2>
+
+<p>If a class is named A, you can use <code>A_create_xxxx</code> (xxxx is specific create 
+method that may needs extra arguments) functions to create a instance, you can 
+use <code>A_destroy</code> function to destroy a instance.
+For example, <code>arraylist al = arraylist_create();</code> will create a array list with
+default capacity. <code>arraylist al = arraylist_destroy(al);</code> will destroy it.
+The creation and destruction function are not OO.</p>
+
+<h2>Function call</h2>
+
+<p>If a class is named A, and there is a instance of A called a, you can use 
+<code>a-&gt;function_name(a, other_arguments);</code> to make a function call, remember to 
+put the instance itself as the first argument of any function call, it's a
+naive way to simulate <em>this</em> reference in Java.</p>
+
+<h2>Cast</h2>
+
+<p>Just like Java. If class A extends/inherits class B, you can use a instance 
+of A where you need a instance of B. You can directly cast A to B. </p>
+
+<p>For example, you can have a array of instance of class <em>collection</em>, and each 
+instance may be a <em>arraylist</em>, <em>linkedlist</em> or other class that inherits/extends
+from <em>collection</em>. </p>
+
+<h1>OO in bcplib</h1>
+
+<p>Like Java, bcplib support concepts of class, single inherit/extends, interface, 
+abstract class, final class. However, some of the concepts are not 100% the same 
+as Java. Especially, the concept <em>inherit</em> and <em>extend</em> in bcplib are different.</p>
+
+<h2>Things to know before start</h2>
+
+<p>The internal represent of bcplib may be complicated, however, to provide a easy-
+to-use library, the interface of bcplib is very simple, even, a little bit 
+incompatible with the "normal" rule of software development. </p>
+
+<ul>
+<li>
+<em>id</em>, a universal pointers to <em>Object</em> in bcplib, just like <em>id</em> in 
+Objective-C. Nearly every <em>Object Function</em> takes a <em>id</em> as input, to simulate
+the <em>this</em> reference. Inside each <em>Object Function</em>, the function first cast 
+the <em>id</em> to the type it needs so that user don`t have to do the cast when use
+a function of parent class. </li>
+<li>Every class type is a pointer type. For example, "arraylist" is actually
+"arraylist_t *". You can also use your own way to allocate the structure and
+use initialize a class instead of create function. For example, normally, you
+write <code>arraylist a = arraylist_create();</code>, here <em>a</em> is a pointer type; and you
+can also write <code>arraylist_t a;</code> and then use <code>arraylist_init(&amp;a);</code> to
+initialize it, here <em>a</em> is a structure type.</li>
+</ul><h2>Class</h2>
+
+<p>In bcplib, each class is actually a structure. Every class in bcplib <em>extends</em> 
+the root class <em>Object</em>. We need the following things to define a class:</p>
+
+<ul>
+<li>A <em>prototype</em> of class, defined by using a macro.</li>
+<li>Definition for each function type.</li>
+<li>Functions to <em>create</em> and <em>destroy</em> a class.</li>
+<li>Functions to <em>initialize</em> and <em>finalize</em> a class.</li>
+</ul><h2>Prototype</h2>
+
+<p>In order to let others inherits/extends itself, one <em>Class</em> should define a 
+prototype of itself. The prototype is defined by using a macro, simply list all 
+data and functions.</p>
+
+<h2>Inherit</h2>
+
+<p>In bcplib, inherit is just use another set of functions to initialize a class.
+If class A inherits class B, A cannot have any function or data that B does not 
+have. For example, function <em>arraylist_create_list_iterator</em> in <em>arraylist.c</em> 
+create a anonymous class that inherits class <em>list_iterator</em> by initializing the
+class with some functions defined in <em>arraylist.c</em>.</p>
+
+<h2>Extends</h2>
+
+<p>Extends in bcclib is like Java. Class A extends class B means that A has all
+function declarations and data that B has, and A may has its own functions or 
+data that B does not have. In the prototype of A, the prototype of B should be 
+the first element so that we can cast A to B. However, this trick way is 
+depend on the structure alignment strategy in specific Compiler.</p>
+
+<h2>Interface</h2>
+
+<p>Interface is just a macro contains data or function lists. A class may includes
+the interface in any position of its prototype except the first one (first 
+element is reserved for the prototype of parent class). We cannot cast a class
+to the interface it implements. So the concept interface in bcplib is 
+incomplete compared to Java.</p>
+
+<h2>Abstract class</h2>
+
+<p>You cannot create a abstract class, so in bcplib, a class without any <em>create</em> 
+or "destroy" functions can be treated as a abstract class. User can still 
+allocate a abstract class and use "init_xxxx" function to initialize it, but 
+it's very dangerous, for the definition of such a abstract class may be 
+incomplete, any function call may lead unknown error.</p>
+
+<h2>Final class</h2>
+
+<p>You cannot extends/inherits a final class in bcplib, since final class does not 
+have a prototype as well as <em>initialize</em> and <em>finalize</em> functions.</p>
       </section>
     </div>
 
