--- a/index.html
+++ b/index.html
@@ -50,12 +50,14 @@ consuming, in a 32-bit architecture, a <em>arraylist</em> object takes up to 104
 
 <h2>Create &amp;&amp; destroy Object</h2>
 
-<p>If a class is named A, you can use <code>A_create_xxxx</code> (xxxx is specific create 
-method that may needs extra arguments) functions to create a instance, you can 
-use <code>A_destroy</code> function to destroy a instance.
-For example, <code>arraylist al = arraylist_create();</code> will create a array list with
-default capacity. <code>arraylist al = arraylist_destroy(al);</code> will destroy it.
-The creation and destruction function are not OO.</p>
+<p><code>class_name A = create(class_name);</code> for "new" a Object and 
+<code>destory(class_instance);</code> for "release" a Object.</p>
+
+<p>For constructors with arguments, there are a set of <code>create</code> functions named as
+<code>createN();</code> where <em>N</em> is the number of arguments. Currently, only zero to three
+arguments are supported. For example, 
+<code>class_name a = create1(class_name, argument1_name, argument1_value);</code>
+will call the specific initialization function with 1 argument.</p>
 
 <h2>Function call</h2>
 
@@ -71,14 +73,34 @@ of A where you need a instance of B. You can directly cast A to B. </p>
 
 <p>For example, you can have a array of instance of class <em>collection</em>, and each 
 instance may be a <em>arraylist</em>, <em>linkedlist</em> or other class that inherits/extends
-from <em>collection</em>. </p>
+from <em>collection</em>.</p>
 
-<h2>Convention</h2>
+<p>There are two ways to cast a object from one class to another. You can just type
+either <code>(class_A_name) class_B_instance_var</code> or 
+<code>cast(class_A_name, class_B_instance_var)</code>
+to cast a instance variable of class B to class A. The different is that the
+later one will do the type check.</p>
+
+<h2>Class Type</h2>
+
+<p>Every object has a class type structure to indicate the type of the object.
+To check if a object is exactly the instance of a class, use
+<code>instanceof</code>. To check if a object inherits/extends or is a instance of a class,
+use <code>kindof</code>.</p>
+
+<h2>Conventions for developing bcplib</h2>
 
 <ol>
-<li>structure should not have "typedef"</li>
-<li>there should be a _prototype if the class is not final.</li>
-<li>structure name should not be the same with the class name.</li>
+<li>The construction and deconstruction function should be named as
+<code>class_name_create();</code> and <code>class_name_destroy(id obj);</code>, for constructors
+with arguments, the name should be
+<code>class_name_create_by_arg1_name_arg2_name(arg1, arg2);</code>
+</li>
+<li>There should be a class_name_prototype macro used to be inherited. For a 
+example of the macro, please see &lt;bcplib/container/arraylist.h&gt;</li>
+<li>Structure name should not be the same with the class name.</li>
+<li>Call <code>DEFINE_CLASS</code> at header file, and call <code>INIT_CLASS</code> in the source file.
+Please see any class inside bcplib for more detail.</li>
 </ol><h1>OO in bcplib</h1>
 
 <p>Like Java, bcplib support concepts of class, single inherit/extends, interface, 
